<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ಲಿಂಗಾಯತ  ಪಂಚಸಂಗಮ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">ಲಿಂಗಾಯತ  ಪಂಚಸಂಗಮ</string>
    <string-array name="menu_array">
        <item>About Us</item>
        <item>Organizations</item>
        <item>Our Leaders</item>
        <item>Lingayat Panchasangam</item>
        <item>Connect to SBJM</item>
    </string-array>
    <string name="title_activity_lingayat_panchasangam">LingayatPanchasangamActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kan1">ಲಿಂಗಾಯತ ಪಂಚಸಂಗಮ ಮಾಸ ಪತ್ರಿಕೆ</string>
    <string name="kan2">ಪ್ರದಾನ ಸಂಪಾದಕರು</string>
    <string name="sbjm_swamy">SBJM Swamiji</string>
    <string name="about_lps">About LPS</string>
    <string name="sanchalakaru">Sanchalakaru</string>
    <string name="registration">Registration</string>
    <string name="list_of_members">List of members</string>
    <string name="distName">District</string>

    <string name="noTeamMember">No Members Found</string>
    <string name="noDist">No Districts Found</string>

    <string name="name">Name*</string>
    <string name="phone">Phone*</string>
    <string name="taluk">Taluk</string>
    <string name="back">Back </string>

    <string name="loginTxt">Log In </string>
    <string name="hintUserNameTxt">User Name</string>
    <string name="hintPassword">Password</string>
    <string name="mandatoryTxt">mandatory</string>
    <string name="qtyShoundnotZeroTxt">Minimum Quanity should be 1</string>
    <string name="invalidCredentialstxt">Invalid Credentials</string>
    <string name="edit_username">Phone Number* </string>
    <string name="edit_password">Password* </string>
    <string name="button_login">Log In</string>
    <string name="check_boxvalue">Remember me</string>
    <string name="passwordUpdated">Password Changed</string>


    ///validation values
    <string name="number_matches">Number should be 10 digits</string>
    <string name="numempty">Number not available</string>
    <string name="correct_password">Enter Correct Password</string>
    <string name="mandtory_text">Mandtory</string>
    <string name="invalidCredintialsTxt">Invalid Credentials</string>
    <string name="noAccessTxt">You don\'t have access to proceed</string>
    <string name="logout"> Logout</string>
    <string name="Sign_In">Sign In</string>
    <string name="noInternet">No internet connection</string>
    <string name="addedSoon">This function will be added soon</string>
    <string name="mustLoginError">You must log in to add User</string>

    <string name="addUser">Add User</string>
    <string name="email">Email*</string>
    <string name="address">Address*</string>
    <string name="subscriptionDetails">Subscription Details</string>
    <string name="invalidEmailError">Invalid email format</string>
    <string name="emailPattern" tools:ignore="TypographyDashes">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+[a-z]+</string>
    <string name="userAddedTxt">User added Successfully </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_panchamsali">About Panchamsali</string>
    <string name="about_peeta">About Peeta</string>
    <string name="about_sbjm">About SBJM</string>
    <string name="lingayat_panchamsangam">Lingayat Panchamsangam</string>
    <string name="connect_to_sbjm">Connect to SBJM</string>
    <string name="exitMsg">Press once again to exit!</string>

    <string name="phoneadapter"><font fgcolor='#000'>Phone : </font></string>
    <string name="emailadapter"><font fgcolor='#000'>Email : </font></string>
    <string name="home">Home</string>
    <string name="abtus">About Us</string>
    <string name="submit">Submit</string>
    <string name="forgot_pass">Forgot Password..?  </string>
    <string name="hintPhone"> Enter Mobile Number</string>
    <string name="hintOtp"> Enter Received OTP</string>
    <string name="proceedTxt">Proceed</string>
    <string name="onlydigitsPattern">[0-9]+</string>
    <string name="phoneNotReg">Incorrect Phone Number</string>
    <string name="errorOnlyDigits">Input should contain Only Digits</string>
    <string name="otpDigitError">Otp should be 6 digits</string>
    <string name="mobileNumError">Mobile number should be 10 digits</string>
    <string name="enter_new_password">Enter New Password</string>


<string name="otpNotMatched">Otp Not Matched</string>
    <string name="reset_password">Reset Password</string>
    <string name="choose_price">Choose Price</string>

    <string name="radioPrice1">1,555</string>
    <string name="radioPrice2">25,555</string>
    <string name="radioPrice3">55,555</string>
</resources>
