<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dimen_10dp">


    <android.support.v7.widget.CardView
        android:id="@+id/cvSingleUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/teamMembers_layout"
            android:orientation="vertical"
            android:foreground="@drawable/ripple_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_6dp" >


            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold"
                android:textSize="@dimen/dimen_18sp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/phone" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/email" />

            <TextView
                android:id="@+id/taluk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@android:color/black"
                android:text="@string/taluk" />

            <TextView
                android:id="@+id/district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@android:color/black"
                android:text="@string/distName" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/viewId1"
        android:layout_width="fill_parent"
        android:layout_below="@+id/cvSingleUser"
        android:layout_height="1dip"
        android:background="@color/horizontal_line_color" />

</RelativeLayout>
