<?xml version="1.0" encoding="utf-8"?>
<!-- tool bar starts here -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_rl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true" >


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:actionMenuTextAppearance="@id/toolbar"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_20sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/kan1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_18sp"
                android:textColor="#000"
                android:text="@string/kan2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/sbjm_swamy"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ccc"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/aboutlps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_border"
                android:text="@string/about_lps"/>

            <TextView
                android:id="@+id/listOfMembersTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_border"
                android:text="@string/sanchalakaru"/>




            <TextView
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_border"
                android:text="@string/registration"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>