<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true" >


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:actionMenuTextAppearance="@+id/toolbar"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appbar"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:padding="@dimen/dimen_20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_70dp"
                android:id="@+id/image_view"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:src="@drawable/splash_image"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/edit_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/edit_password"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_boxvalue"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_16sp"
                android:id="@+id/check_box"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnResetPwd"
                android:layout_gravity="center|end"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/reset_password"
                android:padding="@dimen/dimen_5dp"
                android:background="@drawable/button_border"
                android:textColor="@color/black_text"
                android:textSize="@dimen/dimen_20sp" android:textAllCaps="false"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/button_login"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp"
                android:background="@color/colorPrimary"
                android:textAllCaps="false"/>



        </LinearLayout>
    </ScrollView>


</RelativeLayout>